--- a/sources/src/docs/exercises/designforextension.adoc
+++ b/sources/src/docs/exercises/designforextension.adoc
@@ -66,7 +66,7 @@ First the dependecies in the pom.xml of the rangetest project.
     </build>
     <dependencies>
         <dependency>
-            <groupId>nl.fontys.sebivenlo</groupId>
+            <groupId>io.github.sebivenlo</groupId>
             <artifactId>genericranges</artifactId>
             <version>2.0</version>
             <type>jar</type>
@@ -88,7 +88,7 @@ First the dependecies in the pom.xml of the rangetest project.
         <dependency>
             <groupId>org.junit.jupiter</groupId>      <dependencies>
         <dependency>
-            <groupId>nl.fontys.sebivenlo</groupId>
+            <groupId>io.github.sebivenlo</groupId>
             <artifactId>genericranges</artifactId>
             <version>2.0</version>
             <type>jar</type>
@@ -133,7 +133,7 @@ First the dependecies in the pom.xml of the rangetest project.
 ----
     <dependencies>
         <dependency>
-            <groupId>nl.fontys.sebivenlo</groupId>
+            <groupId>io.github.sebivenlo</groupId>
             <artifactId>genericranges</artifactId>
             <version>2.0</version>
         </dependency>
@@ -147,7 +147,7 @@ First the dependecies in the pom.xml of the rangetest project.
     </dependencies>
 ----
 
-<1> Used in tests. The rest is like normal when using sebipom.
+<1> Used in tests. The rest is like normal when using testeasypom.
 
 In the RangeTestBase and RangeTestFactory I only had to give the methods to be overriden [blue]*protected* visibility instead of my usual _package private_.
 
@@ -158,7 +158,7 @@ The module declaration of rangetest makes is wide [blue]*open*, because that is 
 ----
 module ranges {
     requires java.base;
-    exports nl.fontys.sebivenlo.ranges;
+    exports io.github.sebivenlo.ranges;
 }
 ----
 
