--- a/sources/src/docs/topics/mavenmodules.adoc
+++ b/sources/src/docs/topics/mavenmodules.adoc
@@ -22,7 +22,7 @@ inter-dependencies. Otherwise it is just plain maven.
 .Snippet from a parent pom
 [source,xml]
 ----
-    <groupId>nl.fontys.sebivenlo</groupId>
+    <groupId>io.github.sebivenlo</groupId>
     <artifactId>parentpom</artifactId>
     <version>1.0</version>
     <packaging>pom</packaging>
@@ -63,7 +63,7 @@ The parent defines the packaging as `pom`, the children what ever is required, t
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>nl.fontys.sebivenlo</groupId>
+        <groupId>io.github.sebivenlo</groupId>
         <artifactId>parentpom</artifactId>
         <version>1.0</version>
          <!-- parent directory .. as parent is natural but not mandatory -->
