sebipom is now called testeasypom

--- a/sources/src/docs/topics/mavenmodules.adoc
+++ b/sources/src/docs/topics/mavenmodules.adoc
@@ -13,7 +13,7 @@ other modules.
 
 
 .Modules and parent.
-image::../topics/figures/mavenmodules.svg[]
+image::mavenmodules.svg[]
 
 
 As you see in the figure, the parent lists its children. The children may have
