--- a/sources/src/docs/asciidoc/week02.adoc
+++ b/sources/src/docs/asciidoc/week02.adoc
@@ -7,6 +7,8 @@ include::../adocresources/topmenu.adoc[]
 
 include::{topics}/parameterizedtests.adoc[]
 
+include::{topics}/tuplesandrecords.adoc[]
+
 // EX
 [TIP]
 ====
