applied  visibility to show public use

--- a/sources/src/docs/topics/mockingandstubbing.adoc
+++ b/sources/src/docs/topics/mockingandstubbing.adoc
@@ -284,9 +284,9 @@ public class ConsoleOutput extends OutputStream {
 ****
 You can modify standard output, a.k.a. [blue]`System.out` so that it writes to somewhere else,
 for instance to something like the console output above. https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/lang/System.html#setOut(java.io.PrintStream)[`System.setOut(PrintStream)`]
-can be used for standrad output. This is also the trick that the PRC1 MOOC used to test output by the first programs.
-Important is that it can also be applied to  [blue]*static*
-method such as the well known `public static void main(String[])` that can't be used with Dependency Inversion as we do here.
+can be used for standard output. This is also the trick that the PRC1 MOOC used to test output by the first programs.
+Important is that it can also be applied to [blue]*static* methods such as the well known `public static void main(String[])`
+that can't be used with Dependency Inversion as we do here.
 ****
 
 [TIP]
