--- a/sources/src/docs/topics/tdd.adoc
+++ b/sources/src/docs/topics/tdd.adoc
@@ -104,7 +104,7 @@ expect?
 The truth is, you never get around having to make implementation decisions. We
 just try to minimize our margin for error. So when you start writing your first
 test for your (non-existing) phonebook, you HAVE to have an idea of what the
-phonebook does. So perhaps you start with "I expect that the phonebook let's me
+phonebook is supposed to do. So perhaps you start with "I expect that the phonebook lets me
 look up a person. When I look up Alice, I expect Alice's phone number.". What
 could such a test look like?
 
