--- a/sources/src/docs/asciidoc/index.adoc
+++ b/sources/src/docs/asciidoc/index.adoc
@@ -1,7 +1,7 @@
 :doctitle: Test Driven with Java
 //           T,w,1,2,3,4,5,6,7,8,9,0,1,2,s,t,p
 :tabcolumns: h,h,d,d,d,d,d,d,d,d,d,d,d,d,d,d,d
-include::../adocresources/topmenu.adoc[]
+include::{topics}/topmenu.adoc[]
 
 [#_top]
 == Module description
