--- a/sources/src/docs/asciidoc/week01.adoc
+++ b/sources/src/docs/asciidoc/week01.adoc
@@ -2,7 +2,7 @@
 :docinfo: shared
 //           T,w,1,2,3,4,5,6,7,8,9,0,1,2,s,t,p
 :tabcolumns: d,h,h,d,d,d,d,d,d,d,d,d,d,d,d,d,d
-include::../adocresources/topmenu.adoc[]
+include::{topics}/topmenu.adoc[]
 
 == Write your own tests!
 
