--- a/sources/src/docs/asciidoc/week03.adoc
+++ b/sources/src/docs/asciidoc/week03.adoc
@@ -1,7 +1,7 @@
 :doctitle: W3 Testable and Mockito
 //           T,w,1,2,3,4,5,6,7,8,9,0,1,2,s,t,p
 :tabcolumns: d,h,d,d,h,d,d,d,d,d,d,d,d,d,d,d,d
-include::../adocresources/topmenu.adoc[]
+include::{topics}/topmenu.adoc[]
 
 include::{topics}/mockingandstubbing.adoc[]
 
