--- a/sources/src/docs/asciidoc/week07.adoc
+++ b/sources/src/docs/asciidoc/week07.adoc
@@ -1,7 +1,7 @@
 :doctitle: W7 Java Database Access
 //           T,w,1,2,3,4,5,6,7,8,9,0,1,2,s,t,p
 :tabcolumns: d,h,d,d,d,d,d,d,h,d,d,d,d,d,d,d,d
-include::../adocresources/topmenu.adoc[]
+include::{topics}/topmenu.adoc[]
 
 // [big]#How to work with a database directly from Java in a command line, desktop or web application.#
 
