--- a/sources/src/docs/asciidoc/week09.adoc
+++ b/sources/src/docs/asciidoc/week09.adoc
@@ -1,7 +1,7 @@
 :doctitle: W9 Statemachines and Regex
 //           T,w,1,2,3,4,5,6,7,8,9,0,1,2,s,t,p
 :tabcolumns: d,h,d,d,d,d,d,d,d,d,h,d,d,d,d,d,d
-include::../adocresources/topmenu.adoc[]
+include::{topics}/topmenu.adoc[]
 
 // We are going to develop a simple json parses using the pieces we created in the earlier weeks.
 
