--- a/sources/src/docs/asciidoc/week11.adoc
+++ b/sources/src/docs/asciidoc/week11.adoc
@@ -1,7 +1,7 @@
 :doctitle: W11 Exceptions, Assertions and logging, File(I/O)
 //           T,w,1,2,3,4,5,6,7,8,9,0,1,2,s,t,p
 :tabcolumns: d,h,d,d,d,d,d,d,d,d,d,d,h,d,d,d,d
-include::../adocresources/topmenu.adoc[]
+include::{topics}/topmenu.adoc[]
 
 Logging can be a very powerful instrument to squeeze very much or very precise information from
 a running application. It can be configured without modifying the source code.
