corrected dependecies, which were not used as required

--- a/sources/src/docs/asciidoc/setup.adoc
+++ b/sources/src/docs/asciidoc/setup.adoc
@@ -3,4 +3,4 @@
 :tabcolumns: d,h,d,d,d,d,d,d,d,d,d,d,d,d,h,d,d
 include::{topics}/topmenu.adoc[]
 
-include::../topics/gettingstarted.adoc[]
+include::{topics}/gettingstarted.adoc[]
